--- a/kurzustfelvesz/templates/kurzustfelvesz_list.html
+++ b/kurzustfelvesz/templates/kurzustfelvesz_list.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_logged_in.html' %}
 
 {% block content %}
     <a href="../../kurzusokatfelvesz/create"><h3>Új kurzustfelvesz felvétele</h3></a>
