--- a/osztondij/templates/osztondij_list.html
+++ b/osztondij/templates/osztondij_list.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base_logged_in.html' %}
 
 {% block content %}
-    <a href="../../osztondijjak/create"><h3>Új Ösztöndíj felvétele</h3></a>
+    <a href="../../osztondijak/create"><h3>Új Ösztöndíj felvétele</h3></a>
     <table>
         <tr>
             <th>Hallgató Azonosítója</th>
