--- a/forum/templates/forum_view.html
+++ b/forum/templates/forum_view.html
@@ -45,7 +45,7 @@
                 <button type="submit" class="btn btn-primary login-button">Küldés</button>
             </div>
         </form>
-        {% if role="admin" %}
+        {% if role == "admin" %}
         <form method="POST", class="form-group">
             <h1 class="title">Téma felvitele</h1>
             {% csrf_token %}
